<resources>
    <string name="app_name">NDK_Day78</string>
    <string name="face_recognition">人脸识别</string>
    <string name="bankcard_recognition">银行卡识别</string>
    <string name="id_card_recognition">身份证识别</string>
    <string name="car_number_recognition">车牌号识别</string>
    <string name="text_recognition">文本识别</string>
    <string name="input_baud_rate">请输入波特率</string>
    <string name="no_avaiable_serial_port">没有可用串口</string>

    <!-- 串口设备选择页 -->
    <string name="serial_device_title">串口设备</string>
    <string name="serial_device_subtitle">选择要打开的串口设备，并填写与之匹配的波特率</string>
    <string name="serial_available_devices">可用设备</string>
    <string name="serial_baud_rate_required">请您先设置波特率</string>
    <string name="serial_empty_hint">请确认设备已连接，且 /dev/ttyS* 具备访问权限</string>
</resources>